# media-monitoring

./: .gitignore  README.md  example.env  main.py  pyproject.toml
media_monitoring/: __main__.py  config.py  db.py  monitoring.py  telegram.py
media_monitoring/providers/: __init__.py  base.py  fontanka.py  interfax.py  izvestiya.py  kommersant.py  lentaru.py  mbh.py  mediazona.py  meduza.py  rbk.py  ria.py  rt.py  tvrain.py  vedomosti.py
monitor/providers/: __init__.py  base.py  izvestiya.py  mediazona.py  meduza.py  rt.py
scripts/: format  start
