[tool.poetry]
name = "media-monitoring"
version = "0.1.0"
description = ""
authors = ["NoSoundLeR <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
 