[tool.poetry]
name = "media-monitoring"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.1"
aiogram = "^2.11.2"
motor = "^2.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
isort = "^5.6.4"
autoflake = "^1.4"
black = {version = "*", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
